
Version 1.3.7
-------------

- Windows: Windows 95/98 is no longer supported by the official binary
- OS X: poEdit is now built as Universal binary
- fixed the Preferences menu entry in catalogs manager
- fixed to handle file references with Windows paths on Unix
- fixed the "failed to convert to unicode" bug when saving (#1589744)
- OS X: fixed clicking on PO files in Finder (#1583967)
- fixed opening source files in external editor if the path contains
  spaces (#1743172)
- Windows: fixed keyboard navigation in Find dialog (#1697743)
- added more translations:
     Urdu (Muhammad Shakir Aziz)


Version 1.3.6
-------------

- fixed failure to load correct catalogs without error message
- fixed loading of X-Poedit-Language header (#1567018)
- fixed loading of files in charsets other than UTF-8 (#1562780)
- fixed shortcuts on Mac OS X to not use Alt+something


Version 1.3.5
-------------

- fixed Content-Type header parsing (bug #1346495)
- Unicode build of wxWidgets 2.6 is now required
- fixed bug with entering numbers when using German translation (#1325590)
- fixed broken layout on startup when showing comments window (#1313612)
- initial Mac OS X port
- fixed crash when loading some invalid PO files (#1495970)
- fixed the Find window to not be on top of other apps' windows
- install .desktop files and icons according to freedesktop.org standards
- changed the icons to a combination of Tango Desktop Project and Silk icons
- removed on-the-fly checking of catalog items, it's too buggy
- added more translations:
     Macedonian (Jovan Kostovski)
     Arabic (Mohammed al zaid)
     Thai (Pun)
     Malay (Mahrazi Mohd Kamal)


Version 1.3.4
-------------

- fixed crash when closing the application
- fixed searching in catalogs (bug #1230857)
- fixed restoring window size when maximized
- fixed reading of files with trailing whitespace on lines
- use standard accelerators for Close command
- fixed "Copy original to translation field" to work on singular form entries