@@ -1,4 +1,6 @@
 
+- OS X: fixed startup on computers that didn't have Poedit installed before
+
 Version 1.3.7
 -------------
 
